# namo

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: train.sh
scripts/sweeps/: adam.yaml  gpt2l_adam.yaml  gpt2l_muon.yaml  gpt2l_namo.yaml  gpt2l_namo_d.yaml  gpt2m_adam.yaml  gpt2m_muon.yaml  gpt2m_namo.yaml  gpt2m_namo_d.yaml  muon.yaml  namo.yaml  namo_d.yaml
src/: muon.py  namo.py  train_gpt2.py
src/hydra_configs/: main.yaml
src/hydra_configs/model/: gpt2-m.yaml  gpt2-s.yaml
src/hydra_configs/optim/: adamw.yaml  muon.yaml  namo-d.yaml  namo.yaml
src/nanogpt/: bench.py  model.py  sample.py  train_save.py
